kubernetes/apps/database/dragonfly/cluster/networkpolicy.yaml
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  labels:
    app: dragonfly
  name: dragonfly-observability
spec:
  podSelector:
    matchLabels:
      app: dragonfly
      app.kubernetes.io/name: dragonfly
      app.kubernetes.io/part-of: dragonfly
  policyTypes:
    - Ingress
  ingress:
    - from:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: observability
          podSelector:
            matchLabels:
              app.kubernetes.io/name: prometheus
              app.kubernetes.io/instance: kube-prometheus-stack
      ports:
        - protocol: TCP
          port: 9999
---
# yaml-language-server: $schema=https://raw.githubusercontent.com/yannh/kubernetes-json-schema/refs/heads/master/v1.32.2/networkpolicy-networking-v1.json
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: dragonfly-cluster-access
spec:
  podSelector:
    matchLabels:
      app: dragonfly
      app.kubernetes.io/name: dragonfly
      app.kubernetes.io/part-of: dragonfly
  policyTypes:
    - Ingress
  ingress:
    - from:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: default
          podSelector:
            matchLabels:
              app.kubernetes.io/name: searxng
      ports:
        - protocol: TCP
          port: 6379
    - from:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: matrix
          podSelector:
            matchLabels:
              app.kubernetes.io/name: matrix-synapse
      ports:
        - protocol: TCP
          port: 6379
